adjusts show page layout to fix aside spacing

--- a/app/assets/stylesheets/components/record--descriptions.scss
+++ b/app/assets/stylesheets/components/record--descriptions.scss
@@ -42,7 +42,6 @@
 
   .dl-horizontal dd {
     margin-left: 170px;
-    margin-right: -30px;
     clear: none;
     margin-bottom: 1em;
   }
